# .cpp-learning

./: CMakeLists.txt  main.cpp
Person/: Person.cpp
Simon/: Simon.h
module-2/Person/: Birthday.cpp  Birthday.h  Person.h
module-2/Pounds/: Pounds.cpp  Pounds.h
module-2/Simon/: Simon.cpp  Simon.h
module-2/Tasks/: Tasks.cpp  Tasks.h
module-3/: Tasks.cpp  Tasks.h
