cmake_minimum_required(VERSION 3.15)
project(test)

set(CMAKE_CXX_STANDARD 20)

add_executable(test main.cpp module-2/Person/Birthday.cpp module-2/Person/Birthday.h module-2/Person/Person.cpp module-2/Person/Person.h module-2/Person/Person.cpp module-2/Person/Person.h module-2/Person/Birthday.cpp module-2/Person/Birthday.h module-2/Simon/Simon.cpp module-2/Simon/Simon.h module-2/Pounds/Pounds.cpp module-2/Pounds/Pounds.h module-2/Tasks/Tasks.cpp module-2/Tasks/Tasks.h)